k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeconnect-ingress # Outer HTTP/HTTPS entry point routing traffic into cluster
  namespace: codeconnect-dev
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/v1       # Matches all incoming API requests starting with /api/v1
            pathType: Prefix    # Prefix matching routes all sub-paths (e.g., /api/v1/user, /api/v1/curriculum)
            backend:
              service:
                name: gateway-service # Forwards traffic to Service metadata.name in services/gateway-service.yaml
                port:
                  number: 8080        # Connects to gateway-service target port 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /ws-connect
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
